Save and delete composite snapshot completed